# KoroMind

./: .env.example  .env.test  .env.test.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_INTEGRATION.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TEST_REPORT.md  WORKING_CODE_SNIPPETS.md  bot.py  claude-voice-assistant.service  debug_topics.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  settings.example.json  test_bot.py
.ai/: TODO.md
.ai/reports/: test-run-2026-02-01.md
.ai/skills/agentic-guardrails/: SKILL.md
.ai/skills/coding-lessons/: SKILL.md
.ai/skills/commit/: SKILL.md
.ai/skills/spec-first-issue/: SKILL.md
.ai/specs/: AGENTS.md  CODE_SMELLS.md  README.md  SPEC_FORMAT.md  api.md  arch-multitenancy.md  bug-message-race.md  bug-session-switch-race.md  commit-skill.md  feature-commit-skill.md  feature-docker-deps.md  feature-logging.md  feature-multitenancy.md  feature-mypy-ci.md  feature-skills-management.md  feature-token-tracking.md  infra-docker.md  mcp-servers.md  security-sandbox-isolation.md  security-session-hijacking.md  service-api.md  service-brain.md  service-claude.md  service-cli.md  service-single-instance-architecture.md  service-state.md  service-telegram.md  service-vault.md  service-voice.md  test-integration.md  voice-module.md
.ai/specs/diagrams/: 01-system-overview.mmd  02-session-device-locking.mmd  03-zero-knowledge-encryption.mmd  04-data-model.mmd  05-worker-states.mmd  06-session-states.mmd
.claude/: settings.local.json
.claude/skills/coding-lessons/: SKILL.md
.claude/skills/specs/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: branch_dependencies.md  codebase_structure.md  debugging_patterns.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md  tech_stack.md  testing_patterns.md  vault_integration_notes.md
docker/: koro.env.example
docs/: IMPLEMENTATION-PLAN.md  RC-PROPOSAL.md  README.md  architecture-spec.md  architecture-v1-proposal.md  architecture-v1-proposal.mmd  core-architecture.mmd  e2e-testing.md  local-server-setup.md  second-brain-obsidian-setup.md  second-brain-setup.md  single-instance-architecture.md  single-instance-architecture.mmd  testing-quick-reference.md
examples/: vault-config.yaml
koro/: __init__.py  auth.py  claude.py  config.py  main.py  prompt.py  rate_limit.py  state.py  voice.py
koro/handlers/: __init__.py  callbacks.py  commands.py  messages.py  utils.py
prompts/: koro.md  tc.md  v.md
resources/vault_skeleton/_templates/: note.md
scripts/: get-chat-id.sh  run-e2e-tests.sh  setup.sh
scripts/second-brain-template/: AGENTS.md  README.md
scripts/second-brain-template/inbox/: quick-notes.md
scripts/second-brain-template/knowledge/: _INDEX.md  glossary.md
scripts/second-brain-template/notes/: _INDEX.md
scripts/second-brain-template/projects/: _INDEX.md
skills/obsidian-cli/: SKILL.md
src/: AGENTS.md
src/docs/: RC-PROPOSAL.md
src/koro/: __main__.py  auth.py  claude.py  config.py  main.py  prompt.py  rate_limit.py  state.py  voice.py
src/koro/api/: __init__.py  app.py  deps.py  middleware.py
src/koro/core/: __init__.py  approvals.py  auth.py  brain.py  claude.py  config.py  factory.py  model_validation.py  policy.py  prompt.py  rate_limit.py  sessions.py  state.py  types.py  vault.py  voice.py
src/koro/handlers/: __init__.py  callbacks.py  commands.py  messages.py  utils.py
src/koro/interfaces/: __init__.py
src/koro/providers/: __init__.py
src/koro/storage/: __init__.py  db.py
src/koro/vault/: __init__.py  attachments.py  commit.py  daily.py  frontmatter.py  layout.py  notes.py
src/prompts/: koro.md
src/tests/: AGENTS.md  __init__.py  conftest.py
src/tests/e2e/: __init__.py  test_telegram_e2e.py
src/tests/integration/: test_brain_eval.py  test_brain_live.py  test_brain_quality_eval.py  test_brain_session_live.py  test_brain_streaming_live.py  test_brain_tools_live.py  test_brain_vault_live.py  test_claude_live.py  test_e2e.py  test_elevenlabs_live.py  test_vault_integration.py
src/tests/unit/: __init__.py  test_api_settings.py  test_api_stream.py  test_auth.py  (+15 more)
tests/: conftest.py  test_elevenlabs.py  test_integration.py
tests/integration/: __init__.py  test_claude_live.py  test_e2e.py  test_elevenlabs_live.py
tests/unit/: test_auth.py  test_claude.py  test_config.py  test_handlers.py  test_prompt.py  test_rate_limit.py  test_state.py  test_voice.py
~/.koromind/: koromind.db
(+70 files in other folders)
