[project]
name = "koromind"
version = "1.0.0"
description = "Voice-first interface to Claude's agentic capabilities"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0,<22.0",
    "elevenlabs>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "live: marks tests as requiring live API keys (deselect with '-m \"not live\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["koro"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
