[project]
name = "koromind"
version = "2.0.0"
description = "Multi-interface personal AI assistant with voice and agentic capabilities"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=20.0,<22.0",
    "elevenlabs>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "claude-agent-sdk>=0.1.0",
    "pyyaml>=6.0.0",  # For vault config loading
    # API dependencies
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    # CLI dependencies
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["koro*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12",
    "pre-commit>=4.5.1",
    "httpx>=0.27.0",  # For API testing
    "watchfiles>=0.21.0",
]

[project.scripts]
koromind = "koro.main:main"
koro-api = "koro.api.app:run_server"
koro-cli = "koro.interfaces.cli.app:run_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
pythonpath = ["src"]
markers = [
    "live: marks tests as requiring live API keys (deselect with '-m \"not live\"')",
    "eval: marks tests as agent-evaluated (non-deterministic quality checks)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
files = ["src/koro"]
exclude = ["^src/tests/"]
implicit_optional = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
warn_return_any = true
no_implicit_reexport = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["koro.core.vault"]
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["koro"]
omit = ["src/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
